config/k8s/dev/nginx-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      volumes:
        - name: nginx-certs
          secret: null
          projected:
            sources:
            - secret:
                name: harrybrwn-com-tls
                items:
                  - { key: tls.crt, path: harrybrwn.com.crt }
                  - { key: tls.key, path: harrybrwn.com.key }
            - secret:
                name: hrry-me-tls
                items:
                  - { key: tls.crt, path: hrry.me.crt }
                  - { key: tls.key, path: hrry.me.key }
            - secret:
                name: hrry-dev-tls
                items:
                  - { key: tls.crt, path: hrry.dev.crt }
                  - { key: tls.key, path: hrry.dev.key }
